--- a/src/illustrator/web/templates/style_config.html
+++ b/src/illustrator/web/templates/style_config.html
@@ -132,22 +132,27 @@
                     </div>
 
                     <!-- Action Buttons -->
-                    <div class="d-flex justify-content-between mt-4">
-                        <a href="/manuscript/{{ manuscript_id }}" class="btn btn-secondary d-flex align-items-center">
-                            <span class="material-icons-outlined me-2">arrow_back</span>
-                            Back to Manuscript
-                        </a>
-
-                        <div>
-                            <button type="button" class="btn btn-outline-secondary me-2 d-flex align-items-center" onclick="saveStyleConfig()">
+                    <div class="row g-2 mt-4">
+                        <div class="col-12 col-md-3">
+                            <a href="/manuscript/{{ manuscript_id }}" class="btn btn-secondary w-100 d-flex align-items-center justify-content-center">
+                                <span class="material-icons-outlined me-2">arrow_back</span>
+                                Back to Manuscript
+                            </a>
+                        </div>
+                        <div class="col-12 col-md-3">
+                            <button type="button" class="btn btn-outline-secondary w-100 d-flex align-items-center justify-content-center" onclick="saveStyleConfig()">
                                 <span class="material-icons-outlined me-2">save</span>
                                 Save Style
                             </button>
-                            <button type="button" class="btn btn-outline-primary me-2 d-flex align-items-center" onclick="previewStyle()">
+                        </div>
+                        <div class="col-12 col-md-3">
+                            <button type="button" class="btn btn-outline-primary w-100 d-flex align-items-center justify-content-center" onclick="previewStyle()">
                                 <span class="material-icons-outlined me-2">preview</span>
                                 Preview Style
                             </button>
-                            <button type="submit" class="btn btn-primary d-flex align-items-center">
+                        </div>
+                        <div class="col-12 col-md-3">
+                            <button type="submit" class="btn btn-primary w-100 d-flex align-items-center justify-content-center">
                                 <span class="material-icons-outlined me-2">play_arrow</span>
                                 Start Processing
                             </button>
